# slobot

./: .gitattributes  .gitignore  Dockerfile  README.md  debian.sources  packages.txt  pyproject.toml  requirements.txt  sim_fps.py  sim_gradio_image.py  sim_gradio_qpos.py  sim_gradio_video.py  sim_to_real.py  sim_to_real_client.py
.github/workflows/: python-publish.yml
doc/: acknowledgements.md  calibration_validation.md  camera.md  cup.stl  dataset_generation.md  examples.md  gradio_apps.md  installation.md  path_planning.md  policies.md  real2sim.md  recording_replay.md  teleoperate.md  teleoperation.rbl
doc/assets/: teleoperation.rbl
docker/: Dockerfile.huggingface_space  Dockerfile.local  packages.local.txt  requirements.txt
modal/: eval_gr00t_so100.py  inference_server.py
modal/lerobot/: eval_policy.py  train_policy.py
notebooks/: lerobot_notebook.ipynb  so100_ball_cup2.ipynb
scripts/: kinematics.py  real.py  sim_fps.py  sim_gradio_dashboard.py  sim_to_real.py  sim_to_real_client.py
scripts/sim/: calibrate_params.py  calibrate_real2sim.py  convert_rerun_to_lerobot_dataset.py  fit_real2sim.py  fit_trajectory.py  generate_sim_dataset.py  generate_sim_lerobot_dataset.py  modal_fit_trajectory.py  modal_replay_episodes.py  optimize_real2sim.py  replay_episode.py  replay_episodes.py  replay_real2sim.py  (+3 more)
slobot/: configuration.py  feetech.py  genesis.py  gradio_image_app.py  gradio_video_app.py  image_queue.py  so_arm_100.py  video_streams.py
tests/: steps.csv  test_numpy_solver.py  test_pytorch_solver.py  test_scip_solver.py  test_taichi_solver.py
(+85 files in other folders)
