[project]
name = "slobot"
version = "0.1.18"
requires-python = ">=3.13"

dependencies = [
    # "genesis-world @ git+https://github.com/Genesis-Embodied-AI/Genesis.git",
    "so100-jepa-ac-model",
    "torch",
    "tensorboard",
    # "lerobot @ git+https://github.com/huggingface/lerobot.git",
    "feetech-servo-sdk", # to control motors
    "gradio", # to build webapps
    # "nvidia-gr00t-sdk" @ git+https://github.com/NVIDIA/Isaac-GR00T.git
    "ipykernel", # to run notebooks
    "modal", # serverless GPU compute platform
    "pyscipopt", # SCIP solver
    "ultralytics", # YOLO models
    "rerun-sdk[datafusion]", # to store tele-operated episode data
    "gymnasium>=1.2.3",
]

[tool.uv.sources]
so100-jepa-ac-model = { path = "../so100-jepa-ac-model", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"slobot.config" = ["trs_so_arm100/*", "trs_so_arm100/assets/*", "assets/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
